--- a/public/donateBook.html
+++ b/public/donateBook.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<title>Donate a book</title>
+	<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
 	<h1>Donate a book</h1>
-	<form>
+	
 		Title:<br>
-		<input type="text" name="newTitle" class="titleInput"><br>
+		<input type="text" id="newTitle" name="newTitle" class="titleInput"><br>
 		Author:<br>
-		<input type="text" name="newAuthor" class="authorInput"><br>
+		<input type="text" id="newAuthor" name="newAuthor" class="authorInput"><br>
 		Description:<br>
 		<input type="text" name="newDescription" class="descInput"><br>
 		Pages:<br>
@@ -18,9 +20,19 @@
 		Genre:<br>
 		<input type="text" name="newSection" class="genreInput"><br>
 		
-		<input type="submit" value="submit">
-	</form>
+		<input id="submit" type="submit" value="submit">
+	
+
 
 </body>
 
+<script>
+	var socket = io();
+	$('#submit').click(function(){
+		console.log("sending data to the server");
+		var data = {title : $('#newTitle').val(), author : $('#newAuthor').val()};
+		socket.emit('bookdonate', data); 
+	});
+</script>
 </html>
+
