--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <body>
 <h1>Index.html for the Library goes here</h1>
 
-<script src="/socket.io/socket.io.js"></script>
+<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 <script>
 	var socket = io();
 </script>
