--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE HTML>
 
 <html>
+<head>
+	<title>Library Catalog</title>
+	<link type="text/css" rel="stylesheet" href="/css/index.css">
+</head>
 <body>
-<h1>Index.html for the Library goes here</h1>
+<h1>Library Catalog</h1>
+<ul>
+	<li><a href="/donate/book">Donate Book</a></li>
+	<li><a href="/donate/film">Donate Film</a></li>
+</ul>
 
 <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 <script>
