--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
 <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 <script>
+	var allMedia = [];
 	var socket = io();
 	socket.emit('getCatalog');
 	socket.on('catalog',function(data){
@@ -54,8 +55,9 @@
 			typeIcon = $('<i/>').addClass('material-icons listingType').html('movies');
 		}
 		var info = $('<ul/>').addClass('listingText').append(title,creator,section);
-		var listingLink = $('<span/>').addClass('mediaLink').append(cover,typeIcon,info);
-		var listing = $('<div/>').addClass('listing').append(listingLink);
+		var listingLink = $('<span/>').addClass('mediaLink').append();
+		var listing = $('<div/>').addClass('listing').append(cover,info,typeIcon);
+		allMedia.push(listing);
 		$('#listings').append(listing);
 	});
 	$('main').bind("click","a", function(event){
@@ -107,6 +109,22 @@
 		$('#catalogSearch').addClass('hidden');
 		$('main').append(bigMedia);
 	});
+	
+	document.querySelector("#catalogSearch").addEventListener("input",function () {
+		allMedia.forEach(function(listing){
+			var str = listing.find('.listingTitle').text();
+			str += " " + listing.find('.listingCreator').text();
+			str += " " + listing.find('.listingSection').text();
+			console.log(str);
+			
+			if(!str.toLowerCase().includes($('#catalogSearch').val().toLowerCase())){
+				listing.addClass('hidden');
+			} else {
+				listing.removeClass('hidden');
+			}
+		});
+	});
+	
 </script>
 </body>
 </html>
