--- a/public/index.html
+++ b/public/index.html
@@ -86,10 +86,15 @@
 		var mediaTitle = $('<h2/>').addClass('mediaTitle').text(data.title);
 		var mediaImg = $('<img>').addClass('mediaImg').addClass('mediaImage').attr('src',data.imageURL);
 		var mediaCreator = $('<h3/>').addClass('mediaCreator').text(data.creator);
+		var mediaDesc = $('<p/>').addClass('mediaDesc').text(data.description);
 		var mediaCopies = $('<p/>').addClass('mediaCopies').text("Copies: "+data.copies);
-		var mediaType = $('<p/>').addClass('mediaType').text("Type: "+data.type);
+		var mediaType = $('<i/>').addClass('material-icons mediaType').html('book');
+		if(data.type='film') $('<i/>').addClass('material-icons listingType').html('movies');
 		
-		var addReview = $('<h4/>').addClass('').text("Post Review");
+		//-------REVIEWS-------------------
+		var reviewSection = $('<div/>').addClass('reviewSection');
+		//-------WRITE A REVIEW------------
+		var addReview = $('<h4/>').addClass('reviewHeader').text("Post Review");
 		var userChooser = $('<select/><br>').addClass('userChooser');
 		socket.emit('getUsers');
 		socket.on('users',function(data){
@@ -111,25 +116,35 @@
 				console.log(data);
 				socket.emit('postReview',data);
 			});
+		var writeReview = $('<div/>').addClass('writeReview').append(addReview,userChooser,slider,newDesc,submit);
 		
-		var reviews = $('<div/>').addClass('reviews');
+		//-------SEE OTHER REVIEWS---------
+		var reviews = $('<div/>').addClass('reviews').append( $('<h4/>').addClass('pastReviews').text('Other Reviews') );
 		var ratings = []
-		data.reviews.forEach(function(item){
-			var review = $('<div/>').addClass('reviewEntry');
-			var reviewer = $('<span/>').addClass('reviewer').text(item.userID);
-			var rating = $('<span/>').addClass('rating').text(item.rating);
-			ratings.push(item.rating);
-			var description = $('<p/>').addClass('description').text(item.description);
-			review.append(reviewer,rating,description);
-			reviews.append(review);
-		});
+		if(data.reviews.length==0){
+			reviews.append( $('<h5/>').text('No other reviews.') );
+		}
+		else{
+			data.reviews.forEach(function(item){
+				var review = $('<div/>').addClass('reviewEntry');
+				var reviewer = $('<span/>').addClass('reviewer').text(item.userID);
+				var rating = $('<span/>').addClass('rating').text(item.rating);
+				ratings.push(item.rating);
+				var description = $('<p/>').addClass('description').text(item.description);
+				review.append(reviewer,rating,description);
+				reviews.append(review);
+			});
+		}
 		var total=0; var count=0;
 		ratings.forEach(function(val){
 			total+=parseInt(val);
 			count+=1;
 		});
 		var avgRating = $('<p/>').addClass('avgRating').text('Average Rating: 	'+(total/count).toFixed(1).toString())
-		var bigMedia = $('<div/>').addClass('bigMedia').append(backButton,mediaImg,mediaTitle,mediaCreator,mediaCopies,mediaType,avgRating,addReview,userChooser,slider,newDesc,submit,reviews);
+		
+		//-------WRITE TO DOM--------------
+		var reviewSection = $('<div/>').addClass('reviewSection').append(writeReview,reviews);
+		var bigMedia = $('<div/>').addClass('bigMedia').append(backButton,mediaImg,mediaType,mediaCopies,mediaTitle,mediaCreator,mediaDesc,avgRating,reviewSection);
 
 		$('#listings').addClass('hidden');
 		$('#catalogSearch').addClass('hidden');
