Added and fixed headers

--- a/public/donateBook.html
+++ b/public/donateBook.html
@@ -16,7 +16,7 @@
 	<li><a href="/signup">Sign Up</a></li>
 	
 </ul>
-	<h2>Donate a book</h2>
+	<h2>Donate A Book</h2>
 	
 		Title:<br>
 		<input type="text" id="newTitle" name="newTitle" class="titleInput"><br>
