--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-	<h1>Sign Up for a Library Account</h1>
+<h1>Library</h1>
+<ul id="nav">
+	<li><a href="/">Catalog</a></li>
+	<li><a href="/donate/book">Donate Book</a></li>
+	<li><a href="/donate/film">Donate Film</a></li>
+	<li><a href="/signup">Sign Up</a></li>
+	
+</ul>
+	<h2>Sign Up for a Library Account</h2>
 	
 		Username:<br>
 		<input type="text" id="newUser" name="newUser" class="titleInput"><br>
