--- a/public/donateFilm.html
+++ b/public/donateFilm.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-	<h1>Donate a book</h1>
+<h1>Library</h1>
+<ul id="nav">
+	<li><a href="/">Catalog</a></li>
+	<li><a href="/donate/book">Donate Book</a></li>
+	<li><a href="/donate/film">Donate Film</a></li>
+	<li><a href="/signup">Sign Up</a></li>
+	
+</ul>
+	<h2>Donate A Film</h2>
 	
 		Title:<br>
 		<input type="text" id="newTitle" name="newTitle" class="titleInput"><br>
