--- a/public/donateFilm.html
+++ b/public/donateFilm.html
@@ -14,6 +14,7 @@
 	<li><a href="/donate/book">Donate Book</a></li>
 	<li><a href="/donate/film">Donate Film</a></li>
 	<li><a href="/signup">Sign Up</a></li>
+	<li><a href="/login">Log In</a></li>
 	
 </ul>
 	<h2>Donate A Film</h2>
