--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 	<li><a href="/donate/book">Donate Book</a></li>
 	<li><a href="/donate/film">Donate Film</a></li>
 	<li><a href="/signup">Sign Up</a></li>
+	<li><a href="/login">Log In</a></li>
 	
 </ul>
 
