--- a/public/login.html
+++ b/public/login.html
@@ -17,12 +17,12 @@
 	<li><a href="/login">Log In</a></li>
 	
 </ul>
-	<h2>Sign Up for a Library Account</h2>
+	<h2>Log In</h2>
 	
 		Username:<br>
-		<input type="text" id="newUser" name="newUser" class="titleInput"><br>
+		<input type="text" id="username" name="username" class="userInput"><br>
 		Password:<br>
-		<input type="password" id="newPassword" name="newPassword" class="passwordInput"><br>
+		<input type="password" id="password" name="password" class="passwordInput"><br>
 		
 		<input id="submit" type="submit" value="Submit">
 	
@@ -35,14 +35,18 @@
 	$('#submit').click(function(){
 		$('span').remove('.alert');
 		$('br').remove('.alert');
-		var hashed = hashCode($('#newPassword').val());
-		var data = {userID : $('#newUser').val(), password : hashed};
-		socket.emit('signup', data); 
+		var hashed = hashCode($('#password').val());
+		var data = {userID : $('#username').val(), password : hashed};
+		
+		console.log(data);
+		//DO LOGIN STUFF HERE (socket?)
 	});
-	socket.on('dupUserID',function(){
-		console.log("unavailable");
-		var usernameAlert = $('<span/>').addClass('alert').text("Username '"+$('#newUser').val()+"' not available");
-		usernameAlert.insertBefore('#newUser');
+	
+	//make sure to create a socket emit when username or password is wrong -> will trigger failure text
+	socket.on('badPassword',function(){
+		console.log("Wrong Username Or Password");
+		var usernameAlert = $('<span/>').addClass('alert').text("Username or Password is Incorrect");
+		usernameAlert.insertBefore('#username');
 		$('<br>').addClass('alert').insertBefore('#newUser');
 	});
 	function hashCode(str){
