--- a/public/donateFilm.html
+++ b/public/donateFilm.html
@@ -43,6 +43,13 @@
 		var data = {title : $('#newTitle').val(), director : $('#newDirector').val(), desc : $('#newDescription').val(), length : $('#newLength').val(), section : $('#newSection').val()};
 		socket.emit('filmdonate', data); 
 	});
+	socket.emit('getCurUser');
+	socket.on('username',function(user){
+		//Replace '#' in attr 'src' to own userpage
+		var userLink = $('<a/>').addClass('userLink').text(user);
+		$('body').prepend(userLink)
+		loggedUser=user;
+	});
 </script>
 </html>
 
