added basic self profile page and return system.

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
 	socket.emit('getCurUser');
 	socket.on('username',function(user){
 		//Replace '#' in attr 'src' to own userpage
-		var userLink = $('<a/>').addClass('userLink').text(user);
-		$('body').prepend(userLink)
+		var userLink = $('<a/>').addClass('userLink').attr('href','/profile').text(user);
+		$('body').prepend(userLink);
 		loggedUser=user;
 	});
 	
