--- a/public/donateBook.html
+++ b/public/donateBook.html
@@ -46,9 +46,8 @@
 	socket.emit('getCurUser');
 	socket.on('username',function(user){
 		//Replace '#' in attr 'src' to own userpage
-		var userLink = $('<a/>').addClass('userLink').text(user);
+		var userLink = $('<a/>').addClass('userLink').attr('href','/profile').text(user);
 		$('body').prepend(userLink)
-		loggedUser=user;
 	});
 </script>
 </html>
