--- a/public/signup.html
+++ b/public/signup.html
@@ -35,9 +35,8 @@
 	socket.emit('getCurUser');
 	socket.on('username',function(user){
 		//Replace '#' in attr 'src' to own userpage
-		var userLink = $('<a/>').addClass('userLink').text(user);
+		var userLink = $('<a/>').addClass('userLink').attr('href','/profile').text(user);
 		$('body').prepend(userLink)
-		loggedUser=user;
 	});
 	$('#submit').click(function(){
 		$('span').remove('.alert');
