--- a/public/signup.html
+++ b/public/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-	<title>Donate a book</title>
+	<title>Sign Up</title>
 	<link type="text/css" rel="stylesheet" href="/css/index.css">
 	<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
