--- a/public/signup.html
+++ b/public/signup.html
@@ -35,7 +35,7 @@
 	socket.emit('getCurUser');
 	socket.on('username',function(user){
 		//Replace '#' in attr 'src' to own userpage
-		var userLink = $('<a/>').addClass('userLink').attr('href','/profile').text(user);
+		var userLink = $('<a/>').addClass('userLink').attr('href','/profile/'+user).text(user);
 		$('body').prepend(userLink)
 	});
 	$('#submit').click(function(){
