--- a/public/login.html
+++ b/public/login.html
@@ -3,11 +3,13 @@
 <head>
 	<title>Log in</title>
 	<link type="text/css" rel="stylesheet" href="/css/index.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
+<a id="instructionsButton" href="/help"><i class="material-icons">help</i></a>
 <h1>Library</h1>
 <ul id="nav">
 	<li><a href="/">Catalog</a></li>
