--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+<a id="instructionsButton" href="/help"><i class="material-icons">help</i></a>
 <h1>Library</h1>
 <ul id="nav">
 	<li><a href="/">Catalog</a></li>
